# MilesEdgeworth

./: .editorconfig  .gitignore  CMakeLists.txt  HowToBuld.md  MilesEdgeworth.aps  MilesEdgeworth.cpp  MilesEdgeworth.h  MilesEdgeworth.qrc  MilesEdgeworth.rc  MilesEdgeworth.sln  MilesEdgeworth.vcxproj  MilesEdgeworth.vcxproj.filters  MyGraphicsView.cpp  MyGraphicsView.h  PicViewer.cpp  ProsecutorBadge.ui  README.md  main.cpp  resource.h
codes/MilesEdgeworth_old/: MilesEdgeworth_oldVersion.h
codes/qt_src/MilesEdgeworth/: MilesEdgeworth.cpp  MilesEdgeworth.h
codes/qt_src/PicViewer/: PicViewer.cpp  PicViewer.h
codes/qt_src/ProsecutorBadge/: ProsecutorBadge.cpp  ProsecutorBadge.h
codes/qt_ui/: MilesEdgeworth.ui  PicViewer.ui  ProsecutorBadge.ui
codes/src/: MyGraphicsView.cpp  main.cpp
resource/: MilesEdgeworth.qrc
resource/gifs/: dongzuo.psd
x64/Debug/: MilesEdgeworth.exe.recipe  MilesEdgeworth.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/MilesEdgeworth.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MilesEdgeworth.lastbuildstate  MilesEdgeworth.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rc.command.1.tlog  rc.write.1.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Debug/moc/: moc_MilesEdgeworth.cpp  moc_PicViewer.cpp  moc_ProsecutorBadge.cpp
x64/Debug/uic/: ui_MilesEdgeworth.h  ui_ProsecutorBadge.h
x64/Release/: MilesEdgeworth.exe.recipe  MilesEdgeworth.ipdb  MilesEdgeworth.res  MilesEdgeworth.vcxproj.FileListAbsolute.txt
x64/Release/MilesEdgeworth.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MilesEdgeworth.lastbuildstate  MilesEdgeworth.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
x64/Release/moc/: moc_MyGraphicsView.cpp
x64/Release/uic/: ui_PicViewer.h
